web: Fixed missing font path and minor layout issue

--- a/web/style.css
+++ b/web/style.css
@@ -26,7 +26,7 @@
 @font-face { font-family:SFMono; font-style:normal; font-weight:300; src:url("fonts/SFMono-Light.otf"); }
 @font-face { font-family:SFMono; font-style:italic; font-weight:300; src:url("fonts/SFMono-LightItalic.otf"); }
 @font-face { font-family:SFMono; font-style:normal; font-weight:400; src:url("fonts/SFMono-Regular.otf"); }
-@font-face { font-family:SFMono; font-style:italic; font-weight:400; src:url("fonts/SFMono-Italic.otf"); }
+@font-face { font-family:SFMono; font-style:italic; font-weight:400; src:url("fonts/SFMono-RegularItalic.otf"); }
 @font-face { font-family:SFMono; font-style:normal; font-weight:500; src:url("fonts/SFMono-Medium.otf"); }
 @font-face { font-family:SFMono; font-style:italic; font-weight:500; src:url("fonts/SFMono-MediumItalic.otf"); }
 @font-face { font-family:SFMono; font-style:normal; font-weight:600; src:url("fonts/SFMono-Semibold.otf"); }
@@ -164,6 +164,7 @@ nav a.active:hover {
 }
 .navbar_table td {
 	padding: 0 0.8em;
+	white-space: nowrap;
 }
 
 nav img {
